fix: add validation and test for company not found on create job feature